Bug du overlap du header vicieux réglé

--- a/front-end/fructose/src/App.css
+++ b/front-end/fructose/src/App.css
@@ -292,6 +292,7 @@ header {
     top: 0;
     left: 0;
     bottom: 0;
+    z-index: 100;
 }
 
 .header-user-menu {
